// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the child prop 1`] = `
<View
  style={
    Array [
      undefined,
    ]
  }
>
  <View />
</View>
`;

exports[`uses the specified background, if provided 1`] = `
<View
  style={
    Array [
      undefined,
      Object {
        "backgroundColor": "red",
      },
    ]
  }
/>
`;
